# sunny-shell

./: README.md
cmake/: CMakeLists.txt
logic/: main.cpp
ui/: app_window.slint
